syntax = "proto3";

package auth;

option go_package = "blacksmith.sso.v1;sso";

service Authentication {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    string app_id = 3;
}

message LoginResponse {
    string token = 1;
}

message IsAdminRequest {
    string user_id = 1;
}

message IsAdminResponse {
    bool is_admin = 1;
}

service Authorization {
    rpc Role (RoleRequest) returns (RoleResponse);
}

message RoleRequest {
    string user_id = 1;
}

message RoleResponse {
    string role = 1;
}